--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Lekton&display=swap);@import url(https://fonts.googleapis.com/css?family=Kumar+One&display=swap);:root {
+@import url(https://fonts.googleapis.com/css?family=Lekton&display=swap);@import url(https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap);:root {
   --main: #f1e1d8;
+  --nude: #b38383;
 }
 
 * {
@@ -123,7 +124,7 @@ body {
 .loginreg ul {
   position: fixed;
   list-style: none;
-  color: var(--main);
+  color: white;
   line-height: 25px;
 }
 
@@ -136,12 +137,14 @@ a:hover {
   color: white;
 }
 
-.user {
+.user li {
   list-style: none;
+  color: var(--main);
 }
 
 .userlogout {
   list-style: none;
+  color: white;
 }
 
 footer .logo {
@@ -212,6 +215,8 @@ footer a.active {
 }
 
 .back_button {
+  position: absoulute;
+  z-index: 9;
   margin: 40px 50px 0 50px;
   color: #1e1e1e;
 }
@@ -348,7 +353,9 @@ button {
   z-index: -4;
 }
 
-h2 {
+.title {
+  position: absolute;
+  z-index: 6;
   width: 100%;
   text-align: center;
   padding-bottom: 20px;
@@ -364,6 +371,7 @@ h2 {
 }
 
 .custom_nav {
+  position: relative;
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: horizontal;
@@ -574,24 +582,125 @@ h2 {
 
 /* ##### BLOG ##### */
 
+.blogcontainer {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: start;
+          justify-content: flex-start;
+  margin: -80px 0;
+  background-color: var(--main);
+}
+
 .blogcontainer img {
-  position: relative;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  width: 80vh;
-  margin: 0;
-  padding: 0;
-  top: 0;
-  bottom: 0;
+  background-blend-mode: overlay;
+  width: 100%;
 }
 
 .blogpost {
+  position: absolute;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 100%;
+  margin: 30vh 0;
+}
+
+.blogpost p {
+  color: white;
+  width: 40vh;
+}
+
+.designername {
+  position: absolute;
+  font-family: "Racing Sans One", cursive;
+  color: #b38383;
+  font-size: 3em;
+  width: 40px;
+}
+
+.blogheroimage img {
+  opacity: 0.8;
+}
+
+.blogpost img {
+  width: 50vh;
+  height: 100%;
+}
+
+.bigtext {
+  position: absolute;
+  font-size: 2em;
+  color: var(--main);
+  text-transform: uppercase;
+  width: 80vh;
+  margin: 0 50vh 0;
+}
+
+.blogimagessmall {
+  display: -webkit-box;
+  display: flex;
+  background-color: var(--main);
+  width: 100%;
+}
+
+.blogimagethree img {
+  width: 25em;
+  border: 3px solid #b38383;
+}
+
+.blogimagethree {
   display: -webkit-box;
   display: flex;
   -webkit-box-pack: center;
           justify-content: center;
-  width: 50vh;
+  width: 100%;
+  margin: 30vh 0;
+}
+
+.blogimagefour img {
+  width: 30em;
+  border: 3px solid #b38383;
+}
+
+.blogimagefour {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  width: 100%;
+  margin: 30vh 0;
+}
+
+.bigtextcontainer {
+  position: absolute;
+}
+
+.uploadcontainer {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+  margin: 30vh 0;
+}
+
+.highlight {
+  background-color: #000000d9;
+  padding: 0 10px 0;
+}
+
+.highlightnude {
+  background-color: #b38383;
+  padding: 0 10px 0;
+}
+
+.highlightbigtext {
+  background-color: #b38383;
+  padding: 0 10px 0;
 }
 
 /* ##### MEDIA QUERIES ##### */
@@ -605,6 +714,7 @@ h2 {
     height: 20px;
     margin: 100px;
     font-size: 3em;
+    position: fixed;
   }
 
   .loginreg ul {
@@ -692,9 +802,8 @@ h2 {
     line-height: 1.5;
   }
 
-  .pick-color {
-    display: -webkit-box;
-    display: flex;
+  .pick-color h2 {
+    color: black;
   }
 
   .custom h2 {
@@ -779,17 +888,26 @@ h2 {
     width: 25em;
   }
 
+  /* ##### ABOUT ##### */
+
   .aboutcontainer {
     display: -webkit-box;
     display: flex;
-    -webkit-box-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    -webkit-box-align: center;
-            align-items: center;
-    width: 80vh;
+    -webkit-box-pack: start;
+            justify-content: flex-start;
+    background-color: var(--main);
+  }
+
+  .aboutcontainer img {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-blend-mode: overlay;
+    width: 10px;
+  }
+
+  .aboutheroimage img {
+    opacity: 0.8;
   }
 
   footer {
