--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,21 +75,6 @@ body {
   width: 20vh;
 }*/
 
-.sintastory {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-pack: center;
-          justify-content: center;
-  line-height: 1.5;
-  padding: 100px;
-}
-
-.sintastory p {
-  text-align: center;
-  width: 30em;
-  color: white;
-}
-
 .how {
   display: -webkit-box;
   display: flex;
@@ -221,6 +206,150 @@ footer a.active {
   color: #1e1e1e;
 }
 
+/* ##### ABOUT ##### */
+
+.aboutcontainer {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: -80px 0;
+}
+
+.aboutcontainer img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-blend-mode: overlay;
+  width: 176vh;
+}
+
+.aboutpost {
+  position: absolute;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 80vh;
+  margin: 30vh 0;
+}
+
+.aboutpost h2 {
+  text-align: center;
+  color: var(--main);
+  text-transform: uppercase;
+  font-family: "Racing Sans One", cursive;
+  font-size: 5em;
+}
+
+.aboutpost p {
+  color: white;
+}
+
+.aboutinfos {
+  display: -webkit-box;
+  display: flex;
+  justify-items: space-around;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  position: absolute;
+  width: 100%;
+  background-color: var(--nude);
+}
+
+.aboutlogo {
+  display: -webkit-box;
+  display: flex;
+  position: absolute;
+  z-index: 7;
+  margin: -5vh 0;
+}
+
+.aboutlogo img {
+  width: 43vh;
+}
+
+.aboutproduction {
+  width: 80vh;
+  margin: 20vh 0;
+}
+
+.aboutproduction p {
+  color: black;
+}
+
+.aboutsustain {
+  width: 80vh;
+}
+
+.aboutsustain p {
+  color: black;
+}
+
+/* ##### HELP ##### */
+
+.help_button {
+  position: absolute;
+  position: fixed;
+  z-index: 9;
+  margin: 85vh 170vh 0;
+  background-color: var(--nude);
+  text-transform: uppercase;
+}
+
+.helpcontainer {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: start;
+          justify-content: flex-start;
+  margin: -80px 0;
+  background-color: var(--main);
+}
+
+.helpcontainer h2 {
+  text-align: center;
+  color: var(--main);
+  text-transform: uppercase;
+  font-size: 3em;
+}
+
+.helpcontainer img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-blend-mode: overlay;
+  opacity: 0.6;
+  width: 100%;
+}
+
+.helpinfos {
+  display: -webkit-box;
+  display: flex;
+  justify-items: space-around;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  position: absolute;
+  width: 100%;
+}
+
+.shipping {
+  width: 90vh;
+  margin: 20vh 0;
+}
+
+.shipping p {
+  color: white;
+  font-size: 1.5em;
+}
+
+/* ##### FORMS ##### */
+
 .formcontainer {
   display: -webkit-box;
   display: flex;
@@ -301,6 +430,10 @@ footer a.active {
   border-bottom: 1px solid black;
 }
 
+/*.form-label-group input[type=text] {
+  height: 100px;
+}*/
+
 .regformcontainer label {
   color: #fff;
 }
@@ -329,13 +462,8 @@ button {
 
 .trouserscontainer {
   position: relative;
-  top: 60px;
+  top: 70px;
   left: 0;
-}
-
-.trouser {
-  width: 13em;
-  margin: 50px 0 0 200px;
 }
 
 .trousers {
@@ -346,13 +474,6 @@ button {
   z-index: 8;
 }
 
-.clouds {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -4;
-}
-
 .title {
   position: absolute;
   z-index: 6;
@@ -360,6 +481,7 @@ button {
   text-align: center;
   padding-bottom: 20px;
   font-weight: 700;
+  color: var(--main);
 }
 
 /* ##### TROUSERS CUSTOMIZATION ##### */
@@ -381,7 +503,7 @@ button {
           justify-content: flex-end;
   position: fixed;
   width: 100%;
-  margin: 60px 0;
+  margin: 20px 0;
 }
 
 .custom {
@@ -564,7 +686,7 @@ button {
           flex-direction: column;
   flex-wrap: wrap;
   width: 200px;
-  margin: 0 0 0 70vh;
+  margin: 15vh 0 0 70vh;
 }
 
 .summary {
@@ -577,7 +699,11 @@ button {
           flex-direction: column;
   flex-wrap: wrap;
   width: 200px;
-  margin: 0 0 0 70vh;
+  margin: 15vh 0 0 70vh;
+}
+
+.orderlogin li {
+  list-style: none;
 }
 
 /* ##### BLOG ##### */
@@ -811,10 +937,6 @@ button {
     font-weight: 700;
   }
 
-  .trouser {
-    width: 30em;
-  }
-
   .colors-1 > li {
     list-style: none;
     width: 60px;
@@ -886,28 +1008,6 @@ button {
 
   .trousers svg {
     width: 25em;
-  }
-
-  /* ##### ABOUT ##### */
-
-  .aboutcontainer {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-pack: start;
-            justify-content: flex-start;
-    background-color: var(--main);
-  }
-
-  .aboutcontainer img {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-blend-mode: overlay;
-    width: 10px;
-  }
-
-  .aboutheroimage img {
-    opacity: 0.8;
   }
 
   footer {
