--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lekton&display=swap);@import url(https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap);:root {
   --main: #f1e1d8;
   --nude: #b38383;
+  --black: #231f20;
 }
 
 * {
@@ -122,6 +123,16 @@ a:hover {
   color: white;
 }
 
+.loginlogo {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  background-color: var(--main);
+  opacity: 0.5;
+}
+
 .user li {
   list-style: none;
   color: var(--main);
@@ -156,8 +167,16 @@ footer ul {
 
 footer a {
   text-decoration: none;
-  color: black;
+  color: var(--black);
 }
+
+footer a:active {
+  color: var(--nude);
+}
+
+/*footer a:hover {
+  background: var(--nude);
+}*/
 
 footer {
   position: fixed;
@@ -176,8 +195,9 @@ footer {
   -webkit-box-align: center;
           align-items: center;
   background: #fff;
+  color: var(--main);
   opacity: 0.9;
-  z-index: 1;
+  z-index: 9;
   -webkit-transition: bottom 0.5s ease-in-out;
   transition: bottom 0.5s ease-in-out;
 }
@@ -264,7 +284,7 @@ footer a.active {
   display: -webkit-box;
   display: flex;
   position: absolute;
-  z-index: 7;
+  z-index: 3;
   margin: -5vh 0;
 }
 
@@ -278,7 +298,7 @@ footer a.active {
 }
 
 .aboutproduction p {
-  color: black;
+  color: var(--black);
 }
 
 .aboutsustain {
@@ -286,7 +306,7 @@ footer a.active {
 }
 
 .aboutsustain p {
-  color: black;
+  color: var(--black);
 }
 
 /* ##### HELP ##### */
@@ -350,108 +370,155 @@ footer a.active {
 
 /* ##### FORMS ##### */
 
-.formcontainer {
-  display: -webkit-box;
+/*.formcontainer  {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   height: 400px;
   grid-column-start: 6;
   text-align: center;
   border-radius: 20px;
   opacity: 4;
+}*/
+
+.formcontainer {
+  display: -webkit-box;
+  display: flex;
+  margin: -80px 0;
+  background-color: var(--main);
+  grid-column-start: 6;
+  text-align: center;
+  border-radius: 20px;
+  opacity: 4;
 }
 
-.formlogreg {
-  margin: 50vh 0 0 0;
+.formcontainer img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-blend-mode: overlay;
+  width: 100%;
+  opacity: 0.8;
 }
 
-.formcontainer h5 {
+/*.formlogreg form {
+  position: absolute;
+  width: 100%;
+}*/
+
+.formcontainer h2 {
+  position: absolute;
   font-size: 30px;
 }
 
 .formcontainer .row {
+  color: white;
   line-height: 3;
+  position: absolute;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  align-content: center;
+  width: 400px;
+  height: 500px;
+  margin: 25vh 65vh 0;
+  background-color: #ceb7a6;
+  opacity: 0.8;
+}
+
+.formcontainerlogin {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  height: 50vh;
+  margin: 150px 0;
+  border-radius: 20px;
+  opacity: 4;
+}
+
+.formcontainerlogin .row {
+  color: var(--black);
+  line-height: 3;
+  position: absolute;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  align-content: center;
+  width: 400px;
+  height: 500px;
+  text-align: center;
+}
+
+.form-label-group2 {
+  color: var(--black);
+}
+
+.form-label-group2 input {
+  width: 200px;
+  line-height: 1;
+  color: var(--black);
+  border: 0.5px solid transparent;
+  border-bottom: 1px solid var(--black);
+  background-color: transparent;
 }
 
 .form-label-group {
-  color: black;
-}
-
-.regformcontainer {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-pack: center;
-          justify-content: center;
-  height: 580px;
-  margin: 120px 0;
-  grid-column-start: 6;
-  text-align: center;
-  border-radius: 20px;
-  opacity: 4;
-}
-
-.successregformcontainer {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-pack: center;
-          justify-content: center;
-  height: 30ww0px;
-  margin: 120px 0;
-  grid-column-start: 6;
-  text-align: center;
-  border-radius: 20px;
-  opacity: 4;
-  /*background-color: #fff;*/
-}
-
-.regformcontainer h5 {
-  font-size: 30px;
-}
-
-.regformcontainer .row {
-  line-height: 3;
+  color: white;
 }
 
 .form-label-group input {
   width: 200px;
   line-height: 1;
-  color: black;
-  border: 0.5px solid #fff;
-  border-bottom: 1px solid black;
+  color: var(--black);
+  border: 0.5px solid transparent;
+  border-bottom: 1px solid var(--black);
+  background-color: transparent;
+}
+
+.form-group select {
+  background-color: transparent;
+  border: 1px solid white;
 }
 
 /*.form-label-group input[type=text] {
   height: 100px;
 }*/
 
-.regformcontainer label {
-  color: #fff;
-}
-
 button {
   cursor: pointer;
-  width: 300px;
   outline: none;
-  color: black;
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 20px;
+  color: white;
+  background-color: transparent;
+  border: none;
+  /* border-radius: 20px;*/
+}
+
+.button {
+  font-family: "Racing Sans One", cursive;
+  font-size: 30px;
+  color: var(--main);
+  text-transform: uppercase;
+}
+
+.button:hover {
+  background: var(--nude);
 }
 
 .logreg p {
   font-size: 12px;
   text-align: center;
 }
+
+/* ##### TROUSERSCONTAINER ##### */
 
 .trouserscontainer {
   display: -webkit-box;
@@ -468,6 +535,11 @@ button {
 
 .trousers {
   width: 15em;
+}
+
+.trouser {
+  width: 15em;
+  margin: 0 25vh 0;
 }
 
 .trouser-1 .trouser-2 .trouser-3 {
@@ -490,6 +562,7 @@ button {
   display: -webkit-box;
   display: flex;
   justify-content: space-around;
+  margin: 10vh 0;
 }
 
 .custom_nav {
@@ -672,8 +745,8 @@ button {
   font-weight: bold;
 }
 
-.recept img {
-  width: 10em;
+.receipt img {
+  width: 20em;
 }
 
 .receipt {
@@ -685,21 +758,83 @@ button {
   -webkit-box-direction: normal;
           flex-direction: column;
   flex-wrap: wrap;
-  width: 200px;
+  width: 300px;
   margin: 15vh 0 0 70vh;
 }
+
+.receiptsmall td {
+  width: 250px;
+  line-height: 2;
+}
+
+.receiptsmall,
+.summarytable th,
+td {
+  border-bottom: 1px solid #ddd;
+}
+
+.summarytable td {
+  width: 150px;
+  line-height: 2;
+}
+
+/*.summaryimage{
+  width: 200px;
+}*/
+
+.svgrenderorder {
+  margin: 5vh;
+  height: 600px;
+}
+
+.img-magnifier-container {
+  position: relative;
+}
+
+.img-magnifier-glass {
+  position: absolute;
+  border: 1px solid #f1e1d8;
+  border-radius: 50%;
+  cursor: none;
+  /*Set the size of the magnifier glass:*/
+  width: 200px;
+  height: 200px;
+}
+
+/*.summary {
+  display: flex;
+  //flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}*/
 
 .summary {
   display: -webkit-box;
   display: flex;
-  -webkit-box-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-          flex-direction: column;
+  flex-direction: row;
+  -webkit-box-pack: end;
+  justify-content: flex-end;
+  position: fixed;
+  width: 100%;
+  margin: 40px 0;
+}
+
+.summarytable {
+  display: -webkit-box;
+  display: flex;
   flex-wrap: wrap;
-  width: 200px;
-  margin: 15vh 0 0 70vh;
+  -webkit-box-align: center;
+          align-items: center;
+  width: 600px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  overflow-y: scroll;
+  height: 600px;
+  line-height: 1.5;
+  padding: 80px 0;
 }
 
 .orderlogin li {
@@ -831,210 +966,200 @@ button {
 
 /* ##### MEDIA QUERIES ##### */
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  .loginreg {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-pack: end;
-            justify-content: flex-end;
-    height: 20px;
-    margin: 100px;
-    font-size: 3em;
-    position: fixed;
-  }
+/*
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
 
-  .loginreg ul {
-    border: solid 1px white;
-    padding: 10px;
-  }
-
-  .loginreg li {
-    line-height: 60px;
-  }
-
-  .formcontainer {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-pack: center;
-            justify-content: center;
-    height: 50vh;
-    margin: 150px 0;
-    border-radius: 20px;
-    opacity: 4;
-    font-size: 2.5em;
-  }
-
-  .formcontainer h5 {
-    font-size: 2em;
-  }
-
-  button {
-    font-size: 40px;
-  }
-
-  textarea {
-    width: 20vh;
-    height: 10vh;
-    border: 1px solid #777777;
-  }
-
-  textarea::-webkit-input-placeholder {
-    font-size: 30px;
-  }
-
-  textarea::-moz-placeholder {
-    font-size: 30px;
-  }
-
-  textarea:-ms-input-placeholder {
-    font-size: 30px;
-  }
-
-  textarea::-ms-input-placeholder {
-    font-size: 30px;
-  }
-
-  textarea::placeholder {
-    font-size: 30px;
-  }
-
-  /* ##### TROUSERS CUSTOMIZATION ##### */
-
-  .trouserscontainer2 {
-    display: -webkit-box;
-    display: flex;
-    justify-content: space-around;
-  }
-
-  .custom_nav {
-    display: -webkit-box;
-    display: flex;
-    position: fixed;
-    margin: 10vh 0 0 25vh;
-  }
-
-  .custom {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: end;
-            align-items: flex-end;
-    width: 100%;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    overflow-x: scroll;
-    border-left: 1px solid #777777;
-    height: 60vh;
-    line-height: 1.5;
-  }
-
-  .pick-color h2 {
-    color: black;
-  }
-
-  .custom h2 {
-    width: 100%;
-    font-weight: 700;
-  }
-
-  .colors-1 > li {
-    list-style: none;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 0 10px;
-    cursor: pointer;
-    -webkit-transition-duration: 0.2s;
-            transition-duration: 0.2s;
-  }
-
-  .colors-2 > li {
-    list-style: none;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 0 10px;
-    cursor: pointer;
-    -webkit-transition-duration: 0.2s;
-            transition-duration: 0.2s;
-  }
-
-  .colors-3 > li {
-    list-style: none;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    display: inline-block;
-    margin: 0 10px;
-    cursor: pointer;
-    -webkit-transition-duration: 0.2s;
-            transition-duration: 0.2s;
-  }
-
-  .colors-1 > li:hover {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-  }
-
-  .colors-2 > li:hover {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-  }
-
-  .colors-3 > li:hover {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-  }
-
-  .trouserscontainer2 {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    -webkit-box-align: center;
-            align-items: center;
-    margin: 0 20px 30px -100px;
-    top: 60px;
-    left: 0;
-  }
-
-  .choosetrouserfont {
-    font-size: 3em;
-    padding: 90px;
-  }
-
-  .trousers svg {
-    width: 25em;
-  }
-
-  footer {
-    margin: 0 20px 0 11px;
-    width: 55vh;
-    height: 10em;
-  }
-
-  footer ul {
-    display: -webkit-inline-box;
-    display: inline-flex;
-    justify-content: space-around;
-    width: 100%;
-    padding: 40px;
-  }
-
-  footer li {
-    padding: 10px;
-    cursor: pointer;
-    font-size: 1.8em;
-    -webkit-transition: opacity 0.2s ease-in-out;
-    transition: opacity 0.2s ease-in-out;
-  }
-
-  footer .logo img {
-    width: 15vh;
-    margin: 0 20px 0 40px;
-  }
+.loginreg {
+  display: flex;
+  justify-content: flex-end;
+  height: 20px;
+  margin: 100px;
+  font-size: 3em;
+  position: fixed;
 }
+
+.loginreg ul {
+  border: solid 1px white;
+  padding: 10px;
+}
+
+.loginreg li {
+  line-height: 60px;
+}
+
+.formcontainer  {
+  display: flex;
+  justify-content: center;
+  height: 50vh;
+  margin: 150px 0;
+  border-radius: 20px;
+  opacity: 4;
+  font-size: 2.5em;
+}
+
+.formcontainer {
+  display: flex;
+  justify-content: flex-start;  
+  margin: -80px 0;
+  background-color: var(--main);
+}
+
+.formcontainer img {
+  background-size:  cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-blend-mode: overlay;
+  width: 100%;
+}
+
+button {
+  font-size: 40px;
+}
+
+textarea {
+  width: 20vh;
+  height: 10vh;
+  border: 1px solid #777777;
+}
+
+textarea::placeholder {
+  font-size: 30px;
+} */
+
+/* ##### TROUSERS CUSTOMIZATION ##### */
+
+/*
+.trouserscontainer2 {
+  display: flex;
+  justify-content: space-around;
+}
+
+.custom_nav {
+  display: flex;
+  position: fixed;
+  margin: 10vh 0 0 25vh;
+}
+
+.custom {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;  
+  top: 0;
+  left: 0;
+  bottom: 0;
+  overflow-x: scroll;
+  border-left: 1px solid #777777;
+  height: 60vh;
+  line-height: 1.5; 
+}
+
+
+.pick-color h2 {
+  color: black;
+}
+
+.custom h2 {
+  width: 100%;
+  font-weight: 700;
+}
+
+
+
+.colors-1 > li{
+  list-style: none;
+  width: 60px;
+  height: 60px;
+	border-radius: 50%;
+	display: inline-block;
+	margin: 0 10px;
+	cursor: pointer;
+	transition-duration: .2s;
+}
+
+.colors-2 > li{
+  list-style: none;
+  width: 60px;
+  height: 60px;
+	border-radius: 50%;
+	display: inline-block;
+	margin: 0 10px;
+	cursor: pointer;
+	transition-duration: .2s;
+}
+
+.colors-3 > li{
+  list-style: none;
+  width: 60px;
+  height: 60px;
+	border-radius: 50%;
+	display: inline-block;
+	margin: 0 10px;
+	cursor: pointer;
+	transition-duration: .2s;
+}
+
+.colors-1 > li:hover{
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+.colors-2 > li:hover{
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+.colors-3 > li:hover{
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+.trouserscontainer2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 20px 30px -100px;
+  top: 60px;
+  left: 0;
+}
+
+.choosetrouserfont {
+  font-size: 3em;
+  padding: 90px;
+}
+
+.trousers svg {
+  width: 25em;
+}
+
+
+footer {
+  margin: 0 20px 0 11px;
+  width: 55vh;
+  height: 10em;
+}
+
+footer ul {
+  display: inline-flex;
+  justify-content: space-around;
+  width: 100%;
+  padding: 40px;
+}
+
+footer li {
+  padding: 10px;
+  cursor: pointer;
+  font-size: 1.8em;
+  transition: opacity .2s ease-in-out;
+}
+
+footer .logo img {
+  width: 15vh;
+  margin: 0 20px 0 40px;
+}
+
+}*/
 
