--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lekton&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Racing+Sans+One&display=swap');
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+
 
 :root {
   --main: #f1e1d8;
@@ -391,13 +393,11 @@ footer a.active {
 .shippingtable  th {
   padding: 15px;
   text-align: left;
-  color: #51545f;
 }
 
 .shippingtable td {
   padding: 15px;
   text-align: left;
-  color: #51545f;
 }
 
 .shippingtable td:nth-child(1){
@@ -411,16 +411,42 @@ footer a.active {
 
 /* ##### TABLE PROFILE/USERSLIST/ORDERS + ADMIN ##### */
 
-.tableprofile, .tableorders {
+
+.tablecontainer td {  
+  width: 300px;
+}
+
+.tableorders table{
   display: flex;
   justify-content: center;
+  border-collapse: collapse;
+
 }
 
-.tableorders, .tableprofile th {
+.tableorders th {
   color: var(--nude);
-  background-color: #ceb7a6;
+  width: 150vh;
 }
 
+.tableorders td:first-child {
+  color:var(--main-color);
+
+}
+
+.tableorders th {
+  padding: 15px;
+  text-align: left;
+}
+
+.tableorders td {
+  padding: 15px;
+  text-align: left;
+
+}
+
+.tableorders td:nth-child(2){
+  border-bottom: 1px solid var(--main-txt-color);
+}
 
 
 /* ##### FORMS ##### */
@@ -637,7 +663,6 @@ button {
 .profilecontainer {
   grid-column-start: 6;
   font-family: var(--main-font);
-  color: #51545f;
   font-size: 15px;
   margin: 20vh;
   text-align: center;
@@ -672,13 +697,11 @@ button {
 .tableprofile  th {
   padding: 15px;
   text-align: left;
-  color: #51545f;
 }
 
 .tableprofile  td {
   padding: 15px;
   text-align: left;
-  color: #51545f;
 }
 
 .tableprofile  td:nth-child(1){
