--- a/public/css/app.css
+++ b/public/css/app.css
@@ -491,7 +491,6 @@ footer a.active {
   display: -webkit-box;
   display: flex;
   margin: -80px 0;
-  background-color: var(--main);
   grid-column-start: 6;
   text-align: center;
   border-radius: 20px;
@@ -532,7 +531,6 @@ footer a.active {
   width: 400px;
   height: 500px;
   margin: 25vh 65vh 0;
-  background-color: #ceb7a6;
   opacity: 0.8;
 }
 
@@ -709,6 +707,8 @@ button {
   display: flex;
   -webkit-box-pack: center;
           justify-content: center;
+  line-height: 3;
+  margin: 30px;
 }
 
 .tableprofile td {
@@ -1158,6 +1158,191 @@ td {
 .highlightbigtext {
   background-color: #b38383;
   padding: 0 10px 0;
+}
+
+/* ##### ADMIN DASHBOARD ##### */
+
+.tableadmincontainer {
+  grid-column-start: 6;
+  font-family: var(--main-font);
+  color: #51545f;
+  font-size: 15px;
+  min-width: 200px;
+  padding: 100px;
+  text-align: center;
+  line-height: 3;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+}
+
+.tableadmincontainer .row {
+  text-align: center;
+}
+
+.tableadmincontainer table {
+  border-collapse: collapse;
+}
+
+.tableadmincontainer th {
+  color: var(--nude);
+}
+
+.tableadmincontainer td:first-child {
+  color: var(--main-color);
+}
+
+.tableadmincontainer th {
+  padding: 15px;
+  text-align: left;
+}
+
+.tableadmincontainer td {
+  padding: 15px;
+  text-align: left;
+}
+
+.tableadmincontainer td:nth-child(1) {
+  border-bottom: 1px solid var(--main-txt-color);
+}
+
+.fa-2x {
+  font-size: 1em;
+}
+
+.fa {
+  position: relative;
+  display: table-cell;
+  width: 60px;
+  height: 36px;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 20px;
+}
+
+.main-menu:hover,
+nav.main-menu.expanded {
+  width: 250px;
+  overflow: visible;
+}
+
+.main-menu {
+  background: #fff;
+  text-transform: uppercase;
+  /*border-right:1px solid #e5e5e5;*/
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  width: 60px;
+  overflow: hidden;
+  -webkit-transition: width 0.05s linear;
+  transition: width 0.05s linear;
+  -webkit-transform: translateZ(0) scale(1, 1);
+  z-index: 1000;
+}
+
+.main-menu > ul {
+  margin: 7px 0;
+}
+
+.main-menu li {
+  position: relative;
+  display: block;
+  width: 250px;
+}
+
+.main-menu li > a {
+  position: relative;
+  display: table;
+  border-collapse: collapse;
+  border-spacing: 0;
+  color: #b38383;
+  font-family: "Racing Sans One", cursive;
+  font-size: 14px;
+  text-decoration: none;
+  -webkit-transform: translateZ(0) scale(1, 1);
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+}
+
+.main-menu .nav-icon {
+  position: relative;
+  display: table-cell;
+  width: 60px;
+  height: 36px;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 18px;
+}
+
+.main-menu .nav-text {
+  position: relative;
+  display: table-cell;
+  vertical-align: middle;
+  width: 190px;
+  font-family: "Racing Sans One", cursive;
+}
+
+.main-menu > ul.logout {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.no-touch .scrollable.hover {
+  overflow-y: hidden;
+}
+
+.no-touch .scrollable.hover:hover {
+  overflow-y: auto;
+  overflow: visible;
+}
+
+a:hover,
+a:focus {
+  text-decoration: none;
+}
+
+nav {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+nav ul,
+nav li {
+  outline: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.main-menu li:hover > a,
+nav.main-menu li.active > a,
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus,
+.dropdown-menu > .active > a,
+.dropdown-menu > .active > a:hover,
+.dropdown-menu > .active > a:focus,
+.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,
+.dashboard-page nav.dashboard-menu ul li.active a {
+  color: #fff;
+  background-color: #b38383;
+}
+
+.area {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  margin-top: 10vh;
+  background: #fff;
+  width: 100%;
+  height: 100%;
 }
 
 /* ##### MEDIA QUERIES ##### */
