--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1271,6 +1271,29 @@ position: absolute;
       height: 100%;
   }
 
+  .blogadmincontainer {
+    display: flex;
+    justify-content: center;
+    height: 20px;
+    padding-top: 30px;  
+    line-height: 1.5;
+    width: 100vw;
+  }
+
+  .form-admin-group {
+    color: var(--black);
+  }
+
+  .blogpublish {
+    width: 200px;
+  }
+
+  .adminbutton {
+    color: var(--main);
+  }
+
+
+
 /* ##### MEDIA QUERIES ##### */
 /*
 @media only screen 
