--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,6 +34,70 @@ body {
   width: 100%;
 }
 
+
+.slideshow {
+  width: 500px;
+  height: 500px;
+  border: solid 1px #2F275E;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.slide1 {
+ // background-image: url("/imgs/alealitrouserill-02.jpg");
+}
+
+.slide2 {
+ // background-image: url("/imgs/alealitrouser1.jpg");
+}
+
+.anim-info {
+  position: absolute;
+  left: 40px;
+  bottom: 40px;
+  font-size: 10px;
+}
+.anim-info .info-field {
+  position: absolute;
+  background-color: var(--main);
+  font-weight: 800;
+  padding: 10px;
+  font-size: 10px;
+  overflow: hidden;
+}
+
+.info-field:nth-child(1) {
+  -webkit-transform: translate(0, 0px);
+          transform: translate(0, 0px);
+}
+
+.info-field:nth-child(2) {
+  -webkit-transform: translate(0, 62px);
+          transform: translate(0, 62px);
+}
+
+.info-field:nth-child(3) {
+  -webkit-transform: translate(0, 124px);
+          transform: translate(0, 124px);
+}
+
+.label {
+  white-space: nowrap;
+}
+
 .hero {
   display: flex;
   justify-content: center;
@@ -537,7 +601,6 @@ footer a.active {
   color: var(--black);
 }
 
-
 .form-label-group2 input {
   width: 200px;
   line-height: 1;
@@ -545,6 +608,7 @@ footer a.active {
   border: 0.5px solid transparent;
   border-bottom: 1px solid var(--black);
   background-color: transparent;
+  font-family: var(--main-font);
 }
 
 .form-label-group {
@@ -558,6 +622,8 @@ footer a.active {
   border: 0.5px solid transparent;
   border-bottom: 1px solid var(--black);
   background-color: transparent;
+  font-family: var(--main-font);
+
 }
 
 .form-group select {
@@ -718,6 +784,24 @@ button {
 }
 
 /* ##### TROUSERS CUSTOMIZATION ##### */
+
+.trouserbg {
+  position: absolute;
+}
+
+.trouserbg img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  bottom: 0;
+  filter: blur(1px);
+  -webkit-filter: blur(1px);
+  filter: grayscale(100%);
+}
 
 .trouserscontainer2 {
   display: flex;
@@ -995,7 +1079,7 @@ button {
   background-repeat: no-repeat;
   background-position: center;
   background-blend-mode: overlay;
-  width: 100%;
+  width: 176vh;
 }
 
 .blogpost {
@@ -1292,6 +1376,11 @@ position: absolute;
     color: var(--main);
   }
 
+  #adminrow {
+    height: 300px;
+     text-align: center;
+    
+  }
 
 
 /* ##### MEDIA QUERIES ##### */
