--- a/public/css/app.css
+++ b/public/css/app.css
@@ -299,9 +299,7 @@ footer a.active {
 }
 
 .instructions p {
-  color: var(--main);
   text-transform: uppercase;
-  font-size: 1.2em;
 }
 
 /* ##### ABOUT ##### */
@@ -655,6 +653,50 @@ footer a.active {
   height: 100px;
 }*/
 
+.inputcustom {
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  border-radius: 0.5em;
+  background-color: #fff;
+  height: 40px;
+}
+
+.customselect {
+  font-family: var(--main-font);
+  color: var(--black);
+  line-height: 1.3;
+  padding: 0.6em 1.4em 0.5em 0.8em;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  border-radius: 0.5em;
+  background-color: #fff;
+  height: 40px;
+}
+
+.custompayment {
+  font-family: var(--main-font);
+  color: var(--black);
+  line-height: 1.3;
+  padding: 0.6em 1.4em 0.5em 0.8em;
+  width: 100%;
+  max-width: 150px;
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  border-radius: 0.5em;
+  background-color: #fff;
+  height: 40px;
+}
+
 button {
   cursor: pointer;
   outline: none;
@@ -696,11 +738,11 @@ button {
 }
 
 .trousers {
-  width: 15em;
+  width: 13em;
 }
 
 .trouser {
-  width: 15em;
+  width: 18em;
   margin: 0 25vh 0;
 }
 
@@ -716,6 +758,20 @@ button {
   padding-bottom: 20px;
   font-weight: 700;
   color: var(--main);
+  text-transform: uppercase;
+}
+
+.title0 {
+  font-family: var(--sec-font);
+  color: var(--main);
+  font-size: 2em;
+  text-transform: uppercase;
+}
+
+.title1 {
+  font-family: var(--sec-font);
+  color: var(--nude);
+  font-size: 1.5em;
   text-transform: uppercase;
 }
 
@@ -1115,6 +1171,44 @@ td {
 
 /* ##### BLOG ##### */
 
+.bloghomecontainer {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  margin: -80px 0;
+  background-color: var(--main);
+}
+
+.bloghomecontainer a:hover {
+  color: #fff;
+}
+
+.bloghomecontainer img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 176vh;
+}
+
+.bloghomepost {
+  position: absolute;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  width: 70vh;
+  margin: 30vh 0;
+}
+
+.bloghomepost p {
+  color: white;
+  width: 40vh;
+}
+
 .blogcontainer {
   display: -webkit-box;
   display: flex;
@@ -1426,10 +1520,46 @@ nav.main-menu li.active > a,
   display: flex;
   -webkit-box-pack: center;
           justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
   height: 20px;
   padding-top: 30px;
   line-height: 1.5;
-  width: 100vw;
+  width: 100%;
+  min-height: 100vh;
+}
+
+.blogadminform {
+  display: -webkit-box;
+  display: flex;
+  width: 100px;
+}
+
+.blogpublish {
+  display: -webkit-box;
+  display: flex;
+}
+
+#text {
+  width: 500px;
+  overflow: hidden;
+  background-color: #FFF;
+  color: #222;
+  font-family: Courier, monospace;
+  font-weight: normal;
+  font-size: 24px;
+  resize: none;
+  line-height: 40px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 45px;
+  padding-bottom: 34px;
+  background-image: url(https://static.tumblr.com/maopbtg/E9Bmgtoht/lines.png), url(https://static.tumblr.com/maopbtg/nBUmgtogx/paper.png);
+  background-repeat: repeat-y, repeat;
+  border-radius: 12px;
+  border-top: 1px solid #FFF;
+  border-bottom: 1px solid #FFF;
 }
 
 .form-admin-group {
