--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -293,9 +293,7 @@ footer a.active {
 }
 
 .instructions p {
-  color: var(--main);
   text-transform: uppercase;
-  font-size: 1.2em;
 }
 
 /* ##### ABOUT ##### */
@@ -635,6 +633,54 @@ footer a.active {
   height: 100px;
 }*/
 
+
+.inputcustom {
+  width: 100%;
+  max-width: 100%; 
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+  border-radius: .5em;
+  background-color: #fff;
+  height: 40px;
+
+}
+
+
+.customselect {
+  font-family: var(--main-font);
+  color: var(--black);
+  line-height: 1.3;
+  padding: .6em 1.4em .5em .8em;
+  width: 100%;
+  max-width: 100%; 
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+  border-radius: .5em;
+  background-color: #fff;
+  height: 40px;
+}
+
+.custompayment {
+  font-family: var(--main-font);
+  color: var(--black);
+  line-height: 1.3;
+  padding: .6em 1.4em .5em .8em;
+  width: 100%;
+  max-width: 150px; 
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+  border-radius: .5em;
+  background-color: #fff;
+  height: 40px;
+}
+
+
 button {
   cursor: pointer;
   outline: none;
@@ -673,11 +719,11 @@ button {
 }
 
 .trousers {
-  width: 15em;
+  width: 13em;
 }
 
 .trouser {
-  width: 15em;
+  width: 18em;
   margin: 0 25vh 0;
 }
 
@@ -694,6 +740,20 @@ button {
 	padding-bottom: 20px;
   font-weight: 700;
   color: var(--main);
+  text-transform: uppercase;
+}
+
+.title0 {
+  font-family: var(--sec-font);
+  color: var(--main); 
+  font-size: 2em;
+  text-transform: uppercase;
+}
+
+.title1 {
+  font-family: var(--sec-font);
+  color: var(--nude); 
+  font-size: 1.5em;
   text-transform: uppercase;
 }
 
@@ -1067,6 +1127,38 @@ button {
 
 /* ##### BLOG ##### */
 
+.bloghomecontainer {
+  display: flex;
+  justify-content: center;  
+  margin: -80px 0;
+  background-color: var(--main);
+}
+
+.bloghomecontainer a:hover {
+  color: #fff;
+}
+
+.bloghomecontainer img {
+  background-size:  cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 176vh;
+}
+
+.bloghomepost {
+  position: absolute;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  width: 70vh;
+  margin: 30vh 0;
+}
+
+.bloghomepost p {
+  color: white;
+  width: 40vh;
+}
+
 .blogcontainer {
   display: flex;
   justify-content: flex-start;  
@@ -1358,11 +1450,45 @@ position: absolute;
   .blogadmincontainer {
     display: flex;
     justify-content: center;
+    flex-direction: row;
     height: 20px;
     padding-top: 30px;  
     line-height: 1.5;
-    width: 100vw;
+    width: 100%;
+    min-height: 100vh;
   }
+
+  .blogadminform {
+    display: flex; 
+  width:  100px;
+}
+
+  .blogpublish {
+    display: flex;
+  }
+
+  #text {
+    width:500px;
+    overflow:hidden;
+    background-color:#FFF;
+    color:#222;
+    font-family:Courier, monospace;
+    font-weight:normal;
+    font-size:24px;
+    resize:none;
+    line-height:40px;
+    padding-left:100px;
+    padding-right:100px;
+    padding-top:45px;
+    padding-bottom:34px;
+    background-image:url(https://static.tumblr.com/maopbtg/E9Bmgtoht/lines.png), url(https://static.tumblr.com/maopbtg/nBUmgtogx/paper.png);
+    background-repeat:repeat-y, repeat;
+    -webkit-border-radius:12px;
+    border-radius:12px;
+    border-top:1px solid #FFF;
+    border-bottom:1px solid #FFF;
+  }
+
 
   .form-admin-group {
     color: var(--black);
